member/css/add-task-responsive.css
/* overlay_add_task */
@media (max-width: 1020px) {
  .add-task__priority-options {
    grid-template-columns: repeat(3, 1fr);
    max-width: 100%;
  }

  .add-task__grid {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .add-task__divider {
    max-height: unset;
    min-height: unset;
    width: 90%;
    border: 1px solid #e0e0e0;
  }

  .add-task__required-hint--mobile {
    display: block;
    margin-top: -20px;
    line-height: 1.2;
  }
}

@media (max-width: 1001px) {
  .overlay_add_task {
    gap: 0;
    padding: 18px;
  }

  .add-task__title {
    font-size: 52px;
    margin-bottom: 20px;
  }

  .add-task-close-btn {
    top: 50px;
    display: none;
  }

  .add-task__input,
  .add-task__textarea,
  .custom-select__trigger {
    font-size: 16px;
  }

  .add-task__divider {
    display: none;
  }

  .add-task__grid {
    gap: 0;
  }

  .add-task__selected-assignees {
    margin: 0;
    min-height: 0;
  }

  form {
    gap: 0;
  }

  .add-task__column {
    gap: 2px;
  }

  .add-task__field-spacing {
    margin-bottom: 5px;
  }

  .add-task__footer {
    margin-top: 24px;
  }

  .add-task__priority {
    margin-bottom: 10px;
  }

  .add-task__textarea {
    min-height: 85px;
  }

  .button.add-task__button {
    height: 40px;
    font-size: 16px;
  }

  .add-task__required-star__fix,
  .add-task__required-text__fix {
    position: relative;
    top: -36px;
  }
}

@media (max-width: 820px) {
  label {
    font-size: 16px;
  }

  .add-task__container {
    left: 0;
    width: 100%;
    padding: 24px 16px 90px 16px;
  }

  .add-task__required-hint--mobile {
    display: block;
    margin-top: -20px;
    line-height: 1.2;
  }

  .button.add-task__priority-button {
    font-size: 16px;
  }

  .error-message {
    font-size: 14px;
  }

  .add-task__footer {
    justify-content: space-between;
    position: fixed;
    bottom: 80px;
    right: 22px;
    left: 22px;
    background-color: var(--background__primary);
    width: 93%;
  }
}


@media(max-width: 735px) {
  .add-task__required-hint--mobile {
    display: block;
    margin-top: -20px;
    line-height: 1.2;
  }

  .add-task__required-hint--mobile .add-task__required-star {
    color: #ff3d00;
    font-weight: 700;
    margin-right: 4px;
  }

  .button.add-task__priority-button {
    flex-direction: row;
    font-size: 16px;
  }

  .add-task__title {
    font-size: 46px;
  }

  .button.add-task__button {
    height: 40px;
    font-size: 16px;
    padding: 0px 11px;
    font-weight: 400;
    gap: 0px;
    white-space: nowrap;
  }

  .overlay_add_task {
    height: 836px;
  }

  .add-task__priority-button img {
    margin-left: 0;
    width: 24px;
  }
}

@media (max-width: 720px) {

  .add-task__priority-options {
    max-width: 100%;
  }

  .button.add-task__priority-button {
    height: 44px;
  }

  .button.add-task__button {
    padding: 0 20px;
  }

  .add-task__main {
    bottom: 160px;
    position: relative;
    margin-top: 172px;
  }
}

@media (max-width: 601px) {
  .add-task__container {
    left: 0;
    width: 100%;
    padding: 24px 16px;
    height: calc(100vh - 95px);
  }

  .add-task__title {
    font-size: 32px;
    margin-bottom: 24px;
  }

  .button.add-task__priority-button {
    width: 100%;
  }

  .button.add-task__button {
    padding: 0;
    width: unset;
    padding: 0px 7px 0px 7px;
  }

  .add-task__actions {
    justify-content: flex-end;
    width: 100%;
    padding-right: 16px;
  }

  .add-task__column {
    margin-bottom: 24px;
  }

  .add-task__required-hint {
    position: fixed;
  }

  form {
    justify-content: center;
  }
}

@media (max-width: 430px) {
  .board-overlay__content {
    width: min(1100px, calc(116vw - 64px));
  }

  .button.add-task__priority-button {
    min-width: 120px;
  }

  .add-task__priority-button[value="medium"].selected {
    padding-left: 6px;
  }

  .add-task__priority-options {
    display: flex;
    flex-direction: column;
  }

  .add-task__footer {
    height: 80px;
    align-items: end;
    left: 14px;
  }

  .add-task__required-hint {
    bottom: 130px;
  }
}

